# living-twin-monorep

./: .env.development.example  .env.example  .env.production.example  .env.sentry  .env.staging.example  .env.test.example  .gitignore  .markdownlintignore  DEPENDENCY_UPDATE_GUIDE.md  DOCUMENTATION.md  Makefile  README.md  docker-compose.yml  firebase.json  install-dependencies.sh  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  deploy-cloud-run.yml  deploy-prod.yml  deploy-staging.yml
apps/admin_web/: .env.example  .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json
apps/admin_web/src/: index.css  main.jsx  main.tsx
apps/api/: README.md  openapi-generator-config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  test_agent.py  test_enhanced_agent.py  test_source_discovery.py
apps/api/app/: __init__.py  config.py  di.py  main.py
apps/api/app/adapters/: firebase_auth.py  firestore_repo.py  gcs_storage.py  ingest_job_repo.py  local_mock_repo.py  mock_store.py  neo4j_conversation_store.py  neo4j_pool.py  neo4j_store.py  ollama_llm.py  openai_llm.py  pubsub_bus.py  redis_cache.py  sbert_embedder.py  stub_llm.py
apps/api/app/config/: agent_config.py
apps/api/app/data/test_scenarios/company/: startup_fintech_swot.yaml
apps/api/app/data/test_scenarios/industry/: fintech_global_porters.yaml  fintech_global_swot.yaml  healthcare_global_swot.yaml
apps/api/app/data/test_scenarios/megatrends/: megatrends_climate_change.yaml
apps/api/app/data/test_scenarios/regional/: regional_asia_demographics.yaml
apps/api/app/data/test_scenarios/shared/: strategic_sources.yaml  taxonomy.yaml  test_agent_results.yaml
apps/api/app/domain/: agent_models.py  agent_service.py  agents.py  content_analyzer.py  conversational_service.py  events.py  intelligence_models.py  intelligence_service.py  models.py  porters_models.py  services.py  source_discovery.py  strategic_test_data.py  swot_agent_integration.py  swot_models.py  swot_signal_service.py  test_data_loader.py
apps/api/app/graphql/: __init__.py  resolvers.py  schema.py  types.py
apps/api/app/ingest/: ingest_docs.py  neo4j_setup.cypher
apps/api/app/middleware/: rate_limiter.py
apps/api/app/ports/: 5‑Slide CEO Pitch.md  authz.py  cache.py  conversation_store.py  graph_store.py  llm.py  vector_store.py
apps/api/app/routers/: agents.py  health.py  intelligence.py  rag.py  strategic_test.py
apps/api/app/workers/: agent_worker.py  event_worker.py
apps/api/docs/: API_DOCUMENTATION.md  openapi.json  openapi.yaml
apps/api/scripts/: generate_api_docs.py  generate_openapi_spec.py
apps/api/tests/: test_integration.py  test_routes.py  test_services.py
apps/mobile/: DART_LANGUAGE_OPTIMIZATION_GUIDE.md  DART_MIGRATION_GUIDE.md  README.md  analysis_options.yaml  pubspec.yaml
apps/mobile/android/: local.properties
apps/mobile/ios/: Podfile
apps/mobile/lib/: main.dart
apps/mobile/linux/: CMakeLists.txt
apps/mobile/macos/: Podfile
apps/mobile/test/: widget_test.dart
apps/mobile/web/: index.html  manifest.json
apps/mobile/windows/: CMakeLists.txt
apps/simulation/: __init__.py
apps/simulation/agents/: __init__.py
apps/simulation/communication/: __init__.py
apps/simulation/domain/: __init__.py
apps/simulation/simulation/: __init__.py
docker/: Dockerfile.api  Dockerfile.cloudrun  Dockerfile.rag  Dockerfile.worker  init-databases.sh
docs/: AI_AGENT_ARCHITECTURE.md  AI_AGENT_ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE.md  ASCII_ART_AND_ILLUSTRATIONS_GUIDE.md  CLINE_VS_CURSOR_ANALYSIS.md  CONFIGURATION_SYNC.md  CONVERSATIONAL_EVOLUTION_GUIDE.md  CONVERSATIONAL_IMPLEMENTATION_GUIDE.md  DEPLOYMENT_SETUP.md  DEPLOYMENT_SPRINT_GUIDE.md  DEVELOPMENT_ENVIRONMENT_SETUP.md  EXTERNAL_DEPENDENCIES_ANALYSIS.md  FLUTTER_VS_REACT_NATIVE.md  GITHUB_SETUP_GUIDE.md  GIT_SETUP_GUIDE.md  INTELLIGENCE_HUB_IMPLEMENTATION.md  LIVING_TWIN_CORE_CONCEPTS.md  PUBSUB_EVENT_SYSTEM.md  README_LOCAL_DEV.md  README_PATCH.md  SCALING_AND_COST_GUIDE.md  SCHEMA_CONSISTENCY_GUIDE.md  SECURITY_AND_PERFORMANCE_TESTING.md  SENTRY_SETUP.md  TENANT_ISOLATION_AND_AUTHORIZATION.md  TERMINOLOGY_ALIGNMENT_FIXES.md  TERMINOLOGY_UPDATES_COMPLETED.md  pdf-docx-ingestion.md
docs/ai-ml/: conversational-implementation.md  ollama-setup.md  rag-stack.md  rag-vs-finetuning.md  strategic-alignment.md
docs/api/: README_GRAPHQL.md  README_OPENAPI.md  pubsub-events.md
docs/architecture/: ai-agent-diagrams.md  system-overview.md
docs/deployment/: deployment-setup.md  deployment-sprint.md  security-testing.md
docs/development/: PYTHON_BACKEND_ASSESSMENT.md  external-dependencies.md  implementation-plan.md
docs/getting-started/: git-setup.md  github-setup.md
docs/guides/: api-budget-management.md  ascii-art.md  core-concepts.md  intelligence-hub.md  source-selection.md  strategic-testing.md  swot-detection.md  swot-examples.md  terminology-fixes.md  terminology-updates.md  verifiable-rewards.md
docs/mobile/: crash_reporting_setup.md  dart_optimization_status.md  dart_security_performance_audit.md  dependency_injection_example.md
docs/presentations/: ceo-pitch.md  living_twin_pitch.md  living_twin_strategic_alignment_presentation.md  system-management.md
presentations/: Living_Twin_PMF_GTM_Strategy.md  Living_Twin_Strategic_Alignment_Presentation.md  company-preso.md  investor-preso.md  living_twin_pitch.md  marp_guide.md  preso.md  system-management.md  system-overview.md  user-experience.md
presentations/css/: theme.css
presentations/export/html/: Living_Twin_PMF_GTM_Strategy.html  Living_Twin_Strategic_Alignment_Presentation.html  ceo-pitch.html  company-preso.html  investor-preso.html  living_twin_pitch.html  preso.html  system-management.html  system-overview.html  user-experience.html
tools/scripts/: api_security_monitor.py  check_billing.py  check_resource_utilization.py  fix_dependencies.py  init_neo4j_schema.cypher  load-test.js  manage_neo4j_schema.py  monitor_costs.py  seed_databases.py  set_claims.py  setup-linux.sh  setup-macos.sh  validate-environment.sh
(+114 files in other folders)
